[package]
name = "zap-op-backend-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
tokio = "1"
dotenv = "0.15"
url = "2"
validator = { version = "0.16", features = ["derive"] }
actix-web-httpauth = "0.8.0"
#chrono = { version = "0.4.22", features = ["serde"] }
#derive_more = "0.99.17"
#futures = "0.3.25"
#serde_derive = "1.0"
#serde_json = "1.0"
#actix-service = "2.0.2"
#alcoholic_jwt = "4091.0.0"
#reqwest = "0.11.12"
